--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=regulatory-service
+
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/regulatory_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.properties.hibernate.format_sql=true
+#spring.properties.hibernate.show_sql=true
