--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
 			<version>1.5.5.Final</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.9</version>
+		</dependency>
 
 	</dependencies>
 
