--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.properties.hibernate.format_sql=true
 #spring.properties.hibernate.show_sql=true
+
+# TIME ZONE
+spring.jackson.time-zone=Asia/Jakarta
+
