--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 			<version>5.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
